<resources>
    <string name="app_name">BlibliOneStop</string>
    <string name="username">username</string>
    <string name="date_time">10:10 PM, 22–09–2019</string>
    <string name="post_content">Yuk nonton IG LIVE ngobrol santai bareng David Carlous Pintubatu dan Nova Permatasari \nNanti bakal bahas tentang JNE Cashless &amp; COD. Sekarang merchant gak perlu repot lagi untuk bayar ongkir saat mengirimkan pesanan, karena sudah ada fasilitas JNE cashless. Selain itu juga ada fitur COD yang bisa meningkatkan penjualan karena customer sekarang bisa mengecek dulu produknya sebelum membayar, yang juga akan meningkatkan kepercayaan (trust) ke toko.\nNah mau tau informasi lengkapnya?\nYuk belajar bersama Blibli University melalui episode Fitur Pengiriman JNE Cashless dan Cash on Delivery pada hari Rabu 11, September 2019 pk 15.00.\nBuat yang mau voucher belanja Blibli.com, komen PILIH AKU DONG pada saat live berlangsung. Sampai jumpa!</string>
    <string name="see_more">See More…</string>
    <string name="comment_hint">Leave you thoughs here…</string>
    <string name="post">post</string>
    <string name="fa_vote_up">&#xf164;</string>
    <string name="fa_chevron_right">&#xf054;</string>
    <string name="fa_plus">&#xf067;</string>
    <string name="fa_option">&#xf142;</string>
    <string name="fa_vote_down">&#xf165;</string>
    <string name="fa_comment">&#xf27a;</string>
    <string name="load_previous_comment">Load previous comment</string>
    <string name="tribes">Tribes</string>
    <string name="group_name">anti group-group club</string>
    <string name="squads">Squads</string>
    <string name="groups">Groups</string>
    <string name="label_idea_channel">Idea Channel</string>
    <string name="login">Login Now</string>
    <string name="app_name_login">𝓑𝓵𝓲𝓫𝓵𝓲\n𝓞𝓷𝓮𝓢𝓽𝓸𝓹</string>
    <string name="password">password</string>
    <string name="what_do_you_think">What do you think?</string>
    <string name="send_message">Send message…</string>
    <string name="send">Send</string>
    <string name="create_group">Create group</string>
    <string name="hint_create_group">Letters, numbers and spaces are allowed</string>
    <string name="private_group">Private Group</string>
    <string name="public_group">Public Group</string>
    <string name="group_team">Group Team</string>
    <string name="group_type">Group Type</string>
    <string name="group">Group</string>
    <string name="squad">Squad</string>
    <string name="tribe">Tribe</string>
    <string name="guilds">Guilds</string>
    <string name="enter_the_group_code">Enter the group code</string>
    <string name="create_a_new_group">Create a new group</string>
    <string name="browse_groups">Browse groups</string>
    <string name="join_a_group_with_a_code">Join a group with a code</string>
    <string name="join_a_group">Join a group</string>
    <string name="join">Join</string>
    <string name="close">Close</string>
    <string name="group_code">Group Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="cancel">Cancel</string>
    <string name="leave_caution">Are you sure want to leave from group?</string>
    <string name="view_members">View members</string>
    <string name="leave_group">Leave group</string>
    <string name="yes">Yes</string>
</resources>
