<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gdn.android.onestop.idea.fragment.IdeaCreateFragment">

    <data>
        <variable
            name="viewmodel"
            type="com.gdn.android.onestop.idea.viewmodel.IdeaCreateViewModel" />
    </data>

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:foreground="@drawable/border_round_image"
                app:srcCompat="@drawable/ic_default_user" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/username"
                android:textSize="@dimen/size_text_h2"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_content"
            android:gravity="top|start"
            android:layout_weight="1"
            android:text="@={viewmodel.ideaContent}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/what_do_you_think"
            android:background="@null"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="101dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_idea_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|end"
            android:enabled="false"
            android:text="@string/post"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/faded_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>
</layout>