<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gdn.android.onestop.login.LoginActivity">

    <data>
        <variable
            name="viewmodel"
            type="com.gdn.android.onestop.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginTop="64dp"
            android:layout_weight="1"
            android:background="@drawable/idea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_appname" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="299dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/comment_input_border"
            android:hint="@string/username"
            android:text="@={viewmodel.username}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="299dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/comment_input_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@={viewmodel.password}"
            app:layout_constraintEnd_toEndOf="@+id/et_username"
            app:layout_constraintStart_toStartOf="@+id/et_username"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="299dp"
            android:layout_height="54dp"
            android:layout_marginTop="24dp"
            android:background="@color/blue"
            android:onClick="@{()->viewmodel.doLogin()}"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="56dp"
            android:layout_marginRight="56dp"
            android:lineHeight="40dp"
            android:text="@string/app_name_login"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>