<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="6dp"
    app:contentPadding="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text_h4"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_user"
            app:layout_constraintStart_toEndOf="@+id/iv_user"
            app:layout_constraintTop_toTopOf="@+id/iv_user"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/date_time"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text_h6"
            app:layout_constraintStart_toStartOf="@+id/iv_user"
            app:layout_constraintTop_toBottomOf="@+id/iv_user" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:text="@string/post_content"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />

        <TextView
            android:id="@+id/idea_tv_seemore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:textColor="#6F6F6F"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_content" />

        <com.gdn.android.onestop.base.FaSolidTextView
            android:id="@+id/tv_upVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="&#xf164; 10"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_content"
            app:layout_constraintTop_toBottomOf="@+id/idea_tv_seemore" />

        <com.gdn.android.onestop.base.FaSolidTextView
            android:id="@+id/tv_downVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:text="&#xf165; 10"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tv_upVote"
            app:layout_constraintTop_toTopOf="@+id/tv_upVote" />

        <com.gdn.android.onestop.base.FaSolidTextView
            android:id="@+id/tv_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:text="&#xf27a; 10"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tv_downVote"
            app:layout_constraintTop_toTopOf="@+id/tv_downVote" />

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
