<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.gdn.android.onestop.group.fragment.GroupFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/tv_toggle_tribe"
                        android:layout_gravity="center"
                        android:layout_width="@dimen/size_img_3"
                        android:layout_height="@dimen/size_img_3"
                        android:background="@drawable/ic_down"
                        android:textSize="@dimen/size_text_h3" />

                    <ImageView
                        android:background="@drawable/ic_tribe"
                        android:layout_marginLeft="6dp"
                        android:layout_gravity="center"
                        android:layout_width="@dimen/size_img_4"
                        android:layout_height="@dimen/size_img_4"
                        android:layout_marginStart="6dp" />

                    <TextView
                        android:id="@+id/tv_tribe"
                        android:layout_weight="1"
                        android:text="@string/tribes"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="@dimen/size_text_h2"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_tribe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginLeft="45dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_group" />

                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/tv_toggle_squad"
                        android:layout_gravity="center"
                        android:layout_width="@dimen/size_img_3"
                        android:layout_height="@dimen/size_img_3"
                        android:text="@string/fa_chevron_right"
                        android:background="@drawable/ic_down" />


                    <ImageView
                        android:background="@drawable/ic_squad"
                        android:layout_marginLeft="6dp"
                        android:layout_gravity="center"
                        android:layout_width="@dimen/size_img_4"
                        android:layout_height="@dimen/size_img_4"
                        android:layout_marginStart="6dp" />

                    <TextView
                        android:id="@+id/tv_squad"
                        android:layout_weight="1"
                        android:text="@string/squads"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="@dimen/size_text_h2"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_squad"
                    android:layout_marginStart="45dp"
                    android:layout_marginLeft="45dp"
                    tools:itemCount="2"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/tv_toggle_guild"
                        android:layout_gravity="center"
                        android:layout_width="@dimen/size_img_3"
                        android:layout_height="@dimen/size_img_3"
                        android:text="@string/fa_chevron_right"
                        android:background="@drawable/ic_down"
                        android:textSize="@dimen/size_text_h3" />


                    <ImageView
                        android:background="@drawable/ic_guild"
                        android:layout_gravity="center"
                        android:layout_marginLeft="6dp"
                        android:layout_width="@dimen/size_img_4"
                        android:layout_height="@dimen/size_img_4"
                        android:layout_marginStart="6dp" />

                    <TextView
                        android:id="@+id/tv_guild"
                        android:layout_weight="1"
                        android:text="@string/guilds"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="@dimen/size_text_h2"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_guild"
                    tools:itemCount="25"
                    android:layout_marginStart="45dp"
                    android:layout_marginLeft="45dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>
