<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gdn.android.onestop.channel.ChannelFragment">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/tv_toggle_tribe"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/size_img_group"
                    android:layout_height="@dimen/size_img_group"
                    android:text="@string/fa_chevron_right"
                    android:background="@drawable/ic_right"
                    android:textSize="@dimen/size_text_h3" />

                <ImageView
                    android:background="@drawable/ic_tribe"
                    android:layout_marginLeft="6dp"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/size_img_group"
                    android:layout_height="@dimen/size_img_group"
                    android:layout_marginStart="6dp" />

                <TextView
                    android:layout_weight="1"
                    android:text="@string/tribe"
                    android:layout_marginLeft="4dp"
                    android:textSize="@dimen/size_text_h2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp" />

                <com.gdn.android.onestop.base.FaTextView
                    android:id="@+id/tv_add_tribe"
                    android:gravity="end"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_plus"
                    android:layout_width="@dimen/size_text_h2"
                    android:layout_height="@dimen/size_text_h2"
                    android:layout_marginEnd="10dp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                tools:itemCount="5"
                tools:listitem="@layout/item_group" />

            <LinearLayout
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/tv_toggle_squad"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/size_img_group"
                    android:layout_height="@dimen/size_img_group"
                    android:text="@string/fa_chevron_right"
                    android:background="@drawable/ic_right" />


                <ImageView
                    android:background="@drawable/ic_squad"
                    android:layout_marginLeft="6dp"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/size_img_group"
                    android:layout_height="@dimen/size_img_group"
                    android:layout_marginStart="6dp" />

                <TextView
                    android:layout_weight="1"
                    android:text="@string/squad"
                    android:layout_marginLeft="4dp"
                    android:textSize="@dimen/size_text_h2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp" />

                <com.gdn.android.onestop.base.FaTextView
                    android:id="@+id/tv_add_squad"
                    android:gravity="end"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_plus"
                    android:layout_width="@dimen/size_text_h2"
                    android:layout_height="@dimen/size_text_h2"
                    android:layout_marginEnd="10dp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginLeft="17dp"
                tools:itemCount="10"
                tools:listitem="@layout/item_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp" />

            <LinearLayout
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/tv_toggle_group"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/size_img_group"
                    android:layout_height="@dimen/size_img_group"
                    android:text="@string/fa_chevron_right"
                    android:background="@drawable/ic_right"
                    android:textSize="@dimen/size_text_h3" />


                <ImageView
                    android:background="@drawable/ic_group"
                    android:layout_gravity="center"
                    android:layout_marginLeft="6dp"
                    android:layout_width="@dimen/size_img_group"
                    android:layout_height="@dimen/size_img_group"
                    android:layout_marginStart="6dp" />

                <TextView
                    android:layout_weight="1"
                    android:text="@string/groups"
                    android:layout_marginLeft="4dp"
                    android:textSize="@dimen/size_text_h2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp" />

                <com.gdn.android.onestop.base.FaTextView
                    android:id="@+id/tv_add_group"
                    android:gravity="end"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_plus"
                    android:layout_width="@dimen/size_text_h2"
                    android:layout_height="@dimen/size_text_h2"
                    android:layout_marginEnd="10dp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginLeft="17dp"
                tools:itemCount="25"
                tools:listitem="@layout/item_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp" />

        </LinearLayout>
    </ScrollView>
</layout>
